fpac (3.27.19)
	* Cleaned up the SVN code base
	* Moved the help files from /etc/ax25/fpac/help to /var/ax25/fpac/help 
	  for better policy compliance and less security risk
	* Added some of Charley's scripts: ax25, ax25-up, ax25-down, ax25parms
	* Remove the obsolete mkissattach code (and kiss folder)
	* Add a buch of man pages for the binaries created by this software

 -- Lee Woldanski <ve7fet@tparc.org> Sat, 17 Sep 2011 22:00:00 -0800

fpac (3.27.18)
	* Merged some of Bernard's fixes to the white pages database
	* Minor cosmetic changes for displaying wp data
	* Bernard updated the included How-TO to version 1.77
	* Change the user function to fpac_user to get around a bug when 
	  cross-compiling

 -- Lee Woldanski <ve7fet@tparc.org> Sun, 28 Aug 2011 10:00:00 -0800

fpac (3.27.17)
	* Merged some fixes in for FLEX to get it working better
	* Updated fpac.spec file to check OS and select build dependencies better
	* Bernard updated the included How-TO to version 1.75
	* Added the aprslist.c patch that was applied to trunk but not this branch

 -- Lee Woldanski <ve7fet@tparc.org> Mon, 07 Mar 2011 10:00:00 -0800

fpac (3.27.16)
	* Bug in expanding variables in conf files with make corrected
	* Added some variables to configure.ac to split apart the version for package building
	* Added a fpac.spec file to build RPM's with
	* Leo, IZ5FSA, has a done a bunch of work on the FLEX code to get it working again
	  (still more work in progress)
	* Bernard, F6BVP, has made some debugging changes

 -- Lee Woldanski <ve7fet@tparc.org>  Mon, 31 Jan 2011 22:00:00 -0800

fpac (3.27.15)
	* Rolling Bernards changes into an incremental release
	* Updated sources to use GNU autotools (makes portability using ./configure script)
	* Removed un-used source files not linked to any program
	* Removed #define OLD_AX25 support, builds against current libax25-0.0.12rc2
	* Changed functions rose2asc and ax2asc in wp/wpconvert.c to rose_ntoa and ax25_ntoa, respectively